--- a/index.css
+++ b/index.css
@@ -5,16 +5,14 @@ body, html {
 
 body {
     font-family: 'Inter', sans-serif;
-    font-weight: 500;
+    font-weight: 400;
     font-size: 20px;
     background-color: #ffffff;
-    color: rgba(0, 0, 0, 0.5);
-    
+    color: rgba(0, 0, 0, 0.5); 
+    display: flex;
+    align-items: center;
 }
 
-.container {
-    margin: 200px 200px;
-}
 
 span {
     color: #000000;
@@ -23,18 +21,26 @@ span {
 a {
     text-decoration: none;
     color: rgba(0, 0, 0, 0.5);
+    position: relative;
 }
 a:hover {
-    text-decoration: underline;
+    border-bottom: 2px solid #000000;
     color: #000000;
+    i {
+        color: rgba(0, 0, 0);      
+    }
+}
+
+i {
+    color: rgba(0, 0, 0, 0.5);
+    transform: rotate(-45deg);
+    font-size: 16px;
 }
 .work {
     color: #000000;
     text-decoration: underline;
 }
-img {
-    filter: invert(1);
-}
+
 
 @media (prefers-color-scheme: dark) {
     body {
@@ -48,23 +54,30 @@ img {
     a {
         color: rgba(255, 255, 255, 0.75);
     }
+    i {
+        color: rgba(255, 255, 255, 0.75);
+    }
     a:hover {
+        border-bottom: 2px solid #ffffff;
         color: #ffffff;
+        i {
+            color: #ffffff;      
+        }
     }
     .work {
         color: #ffffff;
     }
-    img {
-        filter: invert(0);
-    }
-
+   
 }
 @media (max-width: 767px) {
     body {
         font-size: 16px; 
     }
+    i {
+        font-size: 12px;
+    }
     .container {
-        margin: 50px 10px;
+        padding: 0px 20px;
     }
 }
 
@@ -72,8 +85,16 @@ img {
     body {
         font-size: 18px;
     }
+    i {
+        font-size: 14px;
+    }
     .container {
-        margin: 75px 30px;
+        margin: 0 70px;
+    }
+}
+@media (min-width: 1024px) {
+    .container {
+        padding: 0 280px;
     }
 }
 
