--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
-body, html {
-    height: 100%; 
+body,
+html {
+    height: 100%;
     margin: 0;
 }
 
@@ -8,7 +9,7 @@ body {
     font-weight: 400;
     font-size: 20px;
     background-color: #ffffff;
-    color: rgba(0, 0, 0, 0.5); 
+    color: rgba(0, 0, 0, 0.5);
     display: flex;
     align-items: center;
 }
@@ -17,17 +18,25 @@ body {
 span {
     color: #000000;
 }
-
 a {
     text-decoration: none;
-    color: rgba(0, 0, 0, 0.5);
-    position: relative;
 }
 a:hover {
     border-bottom: 2px solid #000000;
-    color: #000000;
-    i {
-        color: rgba(0, 0, 0);      
+}
+
+.links {
+    a {
+        color: rgba(0, 0, 0, 0.5);
+        position: relative;
+    }
+
+    a:hover {
+        color: #000000;
+
+        i {
+            color: rgba(0, 0, 0);
+        }
     }
 }
 
@@ -36,9 +45,9 @@ i {
     transform: rotate(-45deg);
     font-size: 16px;
 }
+
 .work {
     color: #000000;
-    text-decoration: underline;
 }
 
 
@@ -47,35 +56,45 @@ i {
         background-color: #000000;
         color: rgba(255, 255, 255, 0.75);
     }
-    
+
     span {
         color: #ffffff;
     }
-    a {
-        color: rgba(255, 255, 255, 0.75);
-    }
-    i {
-        color: rgba(255, 255, 255, 0.75);
-    }
-    a:hover {
-        border-bottom: 2px solid #ffffff;
-        color: #ffffff;
+
+    .links {
+        a {
+            color: rgba(255, 255, 255, 0.75);
+        }
+
         i {
-            color: #ffffff;      
+            color: rgba(255, 255, 255, 0.75);
+        }
+
+        a:hover {
+            border-bottom: 2px solid #ffffff;
+            color: #ffffff;
+
+            i {
+                color: #ffffff;
+            }
         }
     }
+
     .work {
         color: #ffffff;
     }
-   
+
 }
+
 @media (max-width: 767px) {
     body {
-        font-size: 16px; 
+        font-size: 16px;
     }
+
     i {
         font-size: 12px;
     }
+
     .container {
         padding: 0px 20px;
     }
@@ -85,16 +104,18 @@ i {
     body {
         font-size: 18px;
     }
+
     i {
         font-size: 14px;
     }
+
     .container {
-        margin: 0 70px;
+        padding: 0 70px;
     }
 }
-@media (min-width: 1024px) {
+
+@media (min-width: 1200px) {
     .container {
         padding: 0 280px;
     }
 }
-
