--- a/index.css
+++ b/index.css
@@ -100,7 +100,7 @@ i {
     }
 }
 
-@media (min-width: 768px) and (max-width: 1024px) {
+@media (min-width: 768px) {
     body {
         font-size: 18px;
     }
@@ -113,8 +113,19 @@ i {
         padding: 0 70px;
     }
 }
+@media (min-width: 992px) {
+    .container {
+        padding: 0 150px;
+    }
+}
 
 @media (min-width: 1200px) {
+    .container {
+        padding: 0 200px;
+    }
+}
+
+@media (min-width: 1400px) {
     .container {
         padding: 0 280px;
     }
