--- a/index.css
+++ b/index.css
@@ -6,10 +6,10 @@ html {
 
 body {
     font-family: 'Inter', sans-serif;
-    font-weight: 400;
-    font-size: 20px;
+    font-weight: 450;
+    font-size: 17px;
     background-color: #ffffff;
-    color: rgba(0, 0, 0, 0.5);
+    color: rgba(0, 0, 0, 0.6);
     display: flex;
     align-items: center;
 }
@@ -27,7 +27,7 @@ a:hover {
 
 .links {
     a {
-        color: rgba(0, 0, 0, 0.5);
+        color: rgba(0, 0, 0, 0.6);
         position: relative;
     }
 
@@ -41,13 +41,31 @@ a:hover {
 }
 
 i {
-    color: rgba(0, 0, 0, 0.5);
+    color: rgba(0, 0, 0, 0.6);
     transform: rotate(-45deg);
-    font-size: 16px;
+    font-size: 14px;
 }
 
 .work {
     color: #000000;
+}
+
+#fade-in {
+    opacity: 0;
+    transform: translateY(20px);
+    animation: fadeIn 0.8s forwards;
+}
+
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
 
 
@@ -89,44 +107,30 @@ i {
 @media (max-width: 767px) {
     body {
         font-size: 16px;
+        padding: 0px 20px;
     }
 
     i {
         font-size: 12px;
     }
-
-    .container {
-        padding: 0px 20px;
-    }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 768px) and (max-width: 991px) {
     body {
-        font-size: 18px;
+        font-size: 17px;
+    }
+    .container {
+        width: 500px;
     }
 
     i {
         font-size: 14px;
     }
-
-    .container {
-        padding: 0 70px;
-    }
 }
 @media (min-width: 992px) {
     .container {
-        padding: 0 150px;
+        width: 700px;
     }
 }
 
-@media (min-width: 1200px) {
-    .container {
-        padding: 0 200px;
-    }
-}
 
-@media (min-width: 1400px) {
-    .container {
-        padding: 0 280px;
-    }
-}
